--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.5.2
 Django==4.1.2
-mysqlclient==2.1.1
 sqlparse==0.4.3
 tzdata==2022.5
 requests==2.28.1
 form~=0.0.1
+django-uuid-primary-key
+django-crispy-forms
